# ADV-Archon-

./: .env.example  ARCHITECTURE.md  Makefile  README.md  SETUP.md  pyproject.toml
src/adv_archon/: __init__.py  __main__.py
src/adv_archon/core/: agent.py  config.py  consent.py  context.py  intent.py  llm.py  memory.py
src/adv_archon/integrations/: __init__.py  gemini.py  ollama.py
src/adv_archon/plugins/: __init__.py  base.py  loader.py
src/adv_archon/tools/: __init__.py  browser.py  files.py  mac_apps.py  personal.py  web.py
src/adv_archon/ui/: __init__.py  chat.py  commands.py
src/adv_archon/voice/: __init__.py  stt.py  tts.py
tests/: test_agent.py
